<resources>
    <string name="app_name">wanandroid</string>
    <string name="username">用户名:</string>
    <string name="password">密&#160;&#160;&#8201;&#160;码:</string>
    <string name="username_hint">请输入您的用户名</string>
    <string name="password_hint">请输入您的密码</string>
    <string name="logout_dialog_message">确定要退出登录吗？</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="logout">退出登录</string>

    <string name="search_hint">请输入关键词以检索文章</string>
    <string name="search_hottest_word_info">大家都在搜</string>
    <string name="search_input_not_empty">输入关键词不能为空或空格</string>
    <string name="article_kind_hint">分类:%s</string>
    <string name="home_page_article_author">作者:%s</string>
    <string name="home_page_article_sharer">分享人:%s</string>
    <string name="refresh_no_more_data_tip">没有更多数据</string>
    <string name="knowledge_system_toolbar_tip">知识体系</string>
    <string name="useful_website_tip">常用网站</string>
    <string name="navigation_tip">导航</string>
    <string name="knowledge_square_toolbar_tip">近期分享</string>
    <string name="article_is_top_tip">置顶</string>
    <string name="article_is_new_tip">新</string>
    <string name="info_tip">提示</string>
    <string name="login_expired_info">您还未登录或登录已失效,请先登录</string>
    <string name="go_to_login_info">去登录</string>
    <string name="myself_share_list_empty_info">您还没分享过文章,点击分享一下吧</string>
    <string name="collect_article_success_info">收藏成功</string>
    <string name="uncollect_article_success_info">取消收藏成功</string>
    <string name="my_collection_article">我的收藏</string>
    <string name="his_collection_article">他的收藏</string>
    <string name="coin_info">积分:%s(明细)</string>
    <string name="level_info">等级:%s</string>
    <string name="rank_info">排名:%s</string>
    <string name="share_article_title">文章标题(100字以内)</string>
    <string name="share_article_link">文章链接</string>
    <string name="share_article_user">分享人:%s</string>
    <string name="share_article">分享</string>
    <string name="share_article_success">分享成功</string>
</resources>