<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/etUsername"
        app:layout_constraintBottom_toBottomOf="@id/etUsername"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        app:layout_constraintStart_toEndOf="@id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:paddingStart="6dp"
        android:paddingTop="8dp"
        android:paddingEnd="6dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_input"/>


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/tvUsername"
        app:layout_constraintEnd_toEndOf="@id/tvUsername"
        app:layout_constraintTop_toTopOf="@id/etPassword"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:layout_constraintStart_toStartOf="@id/etUsername"
        app:layout_constraintEnd_toEndOf="@id/etUsername"
        app:layout_constraintTop_toTopOf="@id/etUsername"
        android:layout_marginTop="80dp"
        android:paddingStart="6dp"
        android:paddingTop="8dp"
        android:paddingEnd="6dp"
        android:paddingBottom="8dp"
        android:background="@drawable/bg_input"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登录"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/etPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>