<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_common_tips_dialog"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/etArticleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_input"
        android:hint="@string/share_article_title"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/qmui_config_color_25_pure_black" />

    <EditText
        android:id="@+id/etArticleLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_input"
        android:hint="@string/share_article_link"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/qmui_config_color_25_pure_black" />

    <EditText
        android:id="@+id/etArticleUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_input"
        android:focusable="false"
        android:paddingStart="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:textColor="@color/black"
        android:textColorHint="@color/qmui_config_color_25_pure_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp">

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/color_212121"
            android:textSize="13sp"
            android:textStyle="bold"
            app:qmui_backgroundColor="#EDEFF2"
            app:qmui_radius="8dp" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/share_article"
            android:textColor="@color/white90"
            android:textSize="13sp"
            android:textStyle="bold"
            android:background="@drawable/form_dialog_confirm_bg" />
    </LinearLayout>
</LinearLayout>