<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/bg_input">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/ivClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="12dp"
                android:visibility="gone"
                android:src="@drawable/ic_input_close" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSearchHottest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_hottest_word_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@id/llSearch"
        app:layout_constraintTop_toBottomOf="@id/llSearch" />

    <View
        android:id="@+id/division"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="4dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@id/llSearch"
        app:layout_constraintStart_toStartOf="@id/llSearch"
        app:layout_constraintTop_toBottomOf="@id/tvSearchHottest" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchHottestWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/llSearch"
        app:layout_constraintStart_toStartOf="@id/llSearch"
        app:layout_constraintTop_toBottomOf="@id/division" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/articleFragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSearch"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.fragment.app.FragmentContainerView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/hottestWordsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvSearchHottest,division,rvSearchHottestWords" />
</androidx.constraintlayout.widget.ConstraintLayout>